--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -15,6 +15,11 @@
 	opacity: 0.4;	/* 40% opacity */
 }
 
+.ft-form-field {
+    padding-bottom: 1rem;
+    min-height: 50px;
+}
+
 .ft-input,
 .ft-select {
     width: 100%;
@@ -45,9 +50,23 @@
     color: var(--mid-grey);
 }
 
+.ft-radio-buttons-group {
+    margin-bottom: 1rem;
+}
+
+.ft-radio-buttons,
+.ft-checkbox-group {
+    position: relative;
+    right: 10px;
+}
+
 .ft-radio-buttons {
     display: flex;
     align-items: center;
+}
+
+.ft-checkbox-group {
+    margin: 1rem 0;
 }
 
 .ft-checkbox,
